@@ -1,5 +1,6 @@
 ; COLOUR REFERENCE
 ; #cccccc = "unused"
+; #f8cd48 = tooltip category
 ; #ffe6c0 = caption
 ; #2cd23f = item reference
 ; #80cef0 = control
@@ -273,8 +274,8 @@ radioactivity-31=Radioactivity +2^31
 
 [entity-description]
 ; creatures
-big-worm-turret=Emits poison gas. Equip a [img=item.gas-mask] [color=#2cd23f]__ITEM__gas-mask__[/color] to approach safely.\nCan be removed with a [img=item.nobelisk] [color=#2cd23f]__ITEM__nobelisk__[/color] explosion.
-behemoth-worm-turret=Emits poison gas. Equip a [img=item.gas-mask] [color=#2cd23f]__ITEM__gas-mask__[/color] to approach safely.\n[font=default-semibold][color=#ffe6c0]Cannot be destroyed by any means.[/color][/font]
+big-worm-turret=Emits poison gas. Equip a [img=item.gas-mask] [color=#2cd23f]__ITEM__gas-mask__[/color] to approach safely.\n\nCan be removed with a [img=item.nobelisk] [color=#2cd23f]__ITEM__nobelisk__[/color] explosion.
+behemoth-worm-turret=Emits poison gas. Equip a [img=item.gas-mask] [color=#2cd23f]__ITEM__gas-mask__[/color] to approach safely.\n\nCan be weakened by exposure to [img=tooltip-category-nuclear] [font=default-semibold][color=#f8cd48]radiation[/color][/font], then removed with a [img=item.nobelisk] [color=#2cd23f]__ITEM__nobelisk__[/color] explosion.
 small-biter=Can be tamed by placing a [img=item.paleberry] [color=#2cd23d]__ITEM__paleberry__[/color] on the ground with __CONTROL__drop-cursor__.\nOnce tamed, interact with __CONTROL__open-gui__.
 ; constructors
 craft-bench=Allows you to manually craft a large range of different parts. These parts can then be used in the construction of different factory buildings, vehicles and equipment.\n[font=default-semibold][color=#ffe6c0]Requires manual interaction.[/color][/font]
